[project]
name = "comfyui-prompt-helper"
description = "Concat conditions and prompts for ComfyUI"
version = "1.4.1"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/elypha/ComfyUI-Prompt-Helper"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "elypha"
DisplayName = "ComfyUI-Prompt-Helper"
Icon = ""
